--- a/images/hive/Dockerfile
+++ b/images/hive/Dockerfile
@@ -3,15 +3,15 @@ ARG version
 FROM $repository/base:$version
 
 LABEL maintainer="pangiolet@tibco.com"
-LABEL description="This image provides Apache Hive on Cloudera Hadoop $version"
+LABEL description="This image provides Apache Hive2 on Cloudera Hadoop $version"
 
 
 RUN yum update -y \
-&&  yum install -y hive hive-server2 \
+&&  yum install -y hive-server2 \
 &&  yum clean all
 
 
-COPY hive-site.xml.j2  /etc/hadoop/conf/hive-site.xml.j2
+COPY hive-site.xml.j2  /etc/hive/conf/hive-site.xml.j2
 COPY entrypoint        /etc/docker/entrypoint
 
 
