--- a/images/edge/Dockerfile
+++ b/images/edge/Dockerfile
@@ -2,7 +2,7 @@ ARG repository
 ARG version
 FROM $repository/base:$version
 
-LABEL maintainer="pangiolet@tibco.com"
+LABEL maintainer="pangiole@tibco.com"
 LABEL description="This image provides an egde node for Cloudera Hadoop $version"
 
 # TODO add more Spark versions here ...
