--- a/images/hadoop-yarn/resourcemanager/Dockerfile
+++ b/images/hadoop-yarn/resourcemanager/Dockerfile
@@ -3,7 +3,7 @@ ARG version
 FROM $repository/base:$version
 
 
-LABEL maintainer="pangiolet@tibco.com"
+LABEL maintainer="pangiole@tibco.com"
 LABEL description="This image provides Cloudera Hadoop YARN ResourceManager $version"
 
 
