--- a/yum/Dockerfile
+++ b/yum/Dockerfile
@@ -1,5 +1,5 @@
 FROM centos:6.10
-LABEL maintainer="pangiolet@tibco.com"
+LABEL maintainer="pangiole@tibco.com"
 LABEL description="This image provides YUM: the Red Hat package manager \
 and additional tools to create local repositories"
 
