--- a/images/kdc/Dockerfile
+++ b/images/kdc/Dockerfile
@@ -2,7 +2,7 @@ ARG repository
 ARG version
 FROM $repository/base:$version
 
-LABEL maintainer="pangiolet@tibco.com"
+LABEL maintainer="pangiole@tibco.com"
 LABEL description="This image provides the MIT Kerberos KDC for Clouder Hadoop $version"
 
 RUN yum update -y \
