--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,7 +84,7 @@ services:
     networks:
       - docker-net
     ports:
-      - "19888:19888" # http
+      - "19888:19888" # http      (yarn-ui)
       - "10020:10020" # protobuf
       - "5053:5053"   # jvm-debug
     volumes:
@@ -104,7 +104,7 @@ services:
     networks:
       - docker-net
     ports:
-      - "8088:8088"   # http
+      - "8088:8088"   # http      (yarn-ui)
       - "8032:8032"   # protobuf
       - "8030:8030"   # protobuf
       - "5054:5054"   # jvm-debug
@@ -126,8 +126,9 @@ services:
     networks:
       - docker-net
     ports:
-      - "8042:8042"   # http
-      # "0:0"         # protobuf (random)
+      # "0:0"         # protobuf
+      - "8042:8042"   # http     (yarn-ui)
+      - "4041:4040"   # http     (spark-ui)
       - "5055:5055"   # jvm-debug
     volumes:
       - "$resources/shared:/shared"
@@ -137,24 +138,24 @@ services:
       - resourcemanager
 
 
-  hive:
-    image: "$registry/$repository/hive:$version"
-    hostname: "hive.docker.net"
-    container_name: "hive"
-    environment:
-      HADOOP_AUTHENTICATION: "$hadoop_auth"
-      SASL_PROTECTION: "$sasl_protection"
-      TLS_ENCRYPTION: "$tls_encryption"
-    networks:
-      - docker-net
-    ports:
-      - "10000:10000" # jdbc
-      - "5056:5056"   # jvm-debug
-    volumes:
-      - "$resources/shared:/shared"
-    depends_on:
-      - namenode
-      - resourcemanager
+#  hive:
+#    image: "$registry/$repository/hive:$version"
+#    hostname: "hive.docker.net"
+#    container_name: "hive"
+#    environment:
+#      HADOOP_AUTHENTICATION: "$hadoop_auth"
+#      SASL_PROTECTION: "$sasl_protection"
+#      TLS_ENCRYPTION: "$tls_encryption"
+#    networks:
+#      - docker-net
+#    ports:
+#      - "10000:10000" # jdbc
+#      - "5056:5056"   # jvm-debug
+#    volumes:
+#      - "$resources/shared:/shared"
+#    depends_on:
+#      - namenode
+#      - resourcemanager
 
 
   edge:
@@ -168,7 +169,7 @@ services:
     networks:
       - docker-net
     ports:
-      - "4040:4040"    # http (spark-shell)
+      - "4042:4040"    # http       (spark-ui)
       - "5057:5057"    # jvm-debug
     volumes:
       - "$resources/shared:/shared"
