--- a/images/edge/Dockerfile
+++ b/images/edge/Dockerfile
@@ -10,7 +10,10 @@ ENV SPARK_VERSIONS="2.1.2"
 ENV HADOOP_VERSIONS="2.6"
 
 RUN yum update -y \
-&&  yum install -y hive-server2 \
+&&  yum install -y \
+        hive-server2 \
+        openssh-server \
+        openssh-clients \
 &&  mkdir -p /opt && cd $_ \
 &&  for hadoop_version in ${HADOOP_VERSIONS}; do for spark_version in $SPARK_VERSIONS; do curl -s -L http://repos/spark/spark-${spark_version}-bin-hadoop${hadoop_version}.tgz | tar xvfz - ; ln -snf spark-${spark_version}-bin-hadoop${hadoop_version} spark ; done ; done
 
