--- a/images/edge/Dockerfile
+++ b/images/edge/Dockerfile
@@ -18,7 +18,9 @@ RUN yum update -y \
 # &&  for hadoop_version in ${HADOOP_VERSIONS}; do for spark_version in $SPARK_VERSIONS; do curl -s -L http://repos/spark/spark-${spark_version}-bin-hadoop${hadoop_version}.tgz | tar xvfz - ; ln -snf spark-${spark_version}-bin-hadoop${hadoop_version} spark ; done ; done
 
 
-COPY titanic.csv       /var/data/raw/titanic.csv
+COPY titanic.csv       /etc/docker/titanic.csv
+COPY biostats.csv      /etc/docker/biostats.csv
+COPY create.hql        /etc/docker/create.hql
 COPY entrypoint        /etc/docker/entrypoint
 COPY bash_profile.j2   /etc/docker/bash_profile.j2
 
