--- a/images/base/Dockerfile
+++ b/images/base/Dockerfile
@@ -79,5 +79,6 @@ COPY core-site.xml.j2   /etc/hadoop/conf/core-site.xml.j2
 COPY hdfs-site.xml.j2   /etc/hadoop/conf/hdfs-site.xml.j2
 COPY yarn-site.xml.j2   /etc/hadoop/conf/yarn-site.xml.j2
 COPY mapred-site.xml.j2 /etc/hadoop/conf/mapred-site.xml.j2
+COPY hive-site.xml.j2   /etc/hive/conf/hive-site.xml.j2
 
 RUN  yum clean all
