--- a/images/base/krb5.conf
+++ b/images/base/krb5.conf
@@ -1,16 +1,16 @@
 # file: /etc/krb5.conf
-# 
+#
 # It configures Kerberos libraries (upon which both client and server programs are linked)
-# 
+#
 # @author Paolo Angioletti <pangiole@tibco.com>
-# 
+#
 
 [logging]
     kdc = FILE:/var/log/krb5kdc.log
     admin_server = FILE:/var/log/kadmin.log
     default = FILE:/var/log/krb5lib.log
 
-    
+
 [libdefaults]
     default_realm = DOCKER.NET
     dns_lookup_realm = false
@@ -18,13 +18,16 @@
     ticket_lifetime = 24h
     renew_lifetime = 7d
     forwardable = true
+    noaddresses = true
+
 
 [realms]
     DOCKER.NET = {
-        kdc = kdc.docker.net:88
-        admin_server = kdc.docker.net:749
+        kdc = kdc.docker.net:4088
+        admin_server = kdc.docker.net
         default_domain = docker.net
     }
+
 
 [domain_realm]
     docker.net = DOCKER.NET
