--- a/images/hadoop-yarn/nodemanager/Dockerfile
+++ b/images/hadoop-yarn/nodemanager/Dockerfile
@@ -1,10 +1,10 @@
 ARG repository
-ARG version
-FROM $repository/base:$version
+ARG image_version
+FROM $repository/base:$image_version
 
 
 LABEL maintainer="pangiole@tibco.com"
-LABEL description="This image provides Cloudera Hadoop YARN NodeManager $version"
+LABEL description="This image provides Cloudera Hadoop YARN NodeManager $image_version"
 
 
 RUN yum update -y && \
