--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ networks:
 
 services:
   kdc:
-    image: "$registry/$repository/kdc:$version"
+    image: "$registry/$repository/kdc:$image_version"
     hostname: "kdc.docker.net"
     container_name: "kdc"
     networks:
@@ -25,7 +25,7 @@ services:
 
 
   namenode:
-    image: "$registry/$repository/hadoop-hdfs/namenode:$version"
+    image: "$registry/$repository/hadoop-hdfs/namenode:$image_version"
     hostname: "namenode.docker.net"
     container_name: "namenode"
     environment:
@@ -45,7 +45,7 @@ services:
 
 
   datanode1:
-    image: "$registry/$repository/hadoop-hdfs/datanode:$version"
+    image: "$registry/$repository/hadoop-hdfs/datanode:$image_version"
     hostname: "datanode1.docker.net"
     container_name: "datanode1"
     environment:
@@ -72,7 +72,7 @@ services:
 
 
   jobhistory:
-    image: "$registry/$repository/hadoop-mapred/jobhistory:$version"
+    image: "$registry/$repository/hadoop-mapred/jobhistory:$image_version"
     hostname: "jobhistory.docker.net"
     container_name: "jobhistory"
     environment:
@@ -92,7 +92,7 @@ services:
 
 
   resourcemanager:
-    image: "$registry/$repository/hadoop-yarn/resourcemanager:$version"
+    image: "$registry/$repository/hadoop-yarn/resourcemanager:$image_version"
     hostname: "resourcemanager.docker.net"
     container_name: "resourcemanager"
     environment:
@@ -114,7 +114,7 @@ services:
 
 
   nodemanager1:
-    image: "$registry/$repository/hadoop-yarn/nodemanager:$version"
+    image: "$registry/$repository/hadoop-yarn/nodemanager:$image_version"
     hostname: "nodemanager1.docker.net"
     container_name: "nodemanager1"
     environment:
@@ -138,7 +138,7 @@ services:
 
 
   hive:
-    image: "$registry/$repository/hive:$version"
+    image: "$registry/$repository/hive:$image_version"
     hostname: "hive.docker.net"
     container_name: "hive"
     environment:
@@ -158,7 +158,7 @@ services:
 
 
   edge:
-    image: "$registry/$repository/edge:$version"
+    image: "$registry/$repository/edge:$image_version"
     hostname: "edge.docker.net"
     container_name: "edge"
     environment:
