--- a/images/build
+++ b/images/build
@@ -1,14 +1,13 @@
 #!/usr/bin/env bash
 
+#
+# This script builds the Docker images
+# for the containerized Cloudera Hadoop cluster
+#
+
 # Compute the path to directory that contains this script
 readonly selfdir="$( cd "$( dirname "${BASH_SOURCE[0]}" )" >/dev/null && pwd )"
 source $selfdir/functions
-
-readonly network="build.net"
-readonly registry="registry.alpinedata.tech"
-readonly repository="pangiolet/cloudera"
-
-
 
 
 function create_network {
@@ -37,23 +36,29 @@ function run_repo_server {
 
 function destroy {
   local image="${1}"
-  local version="${cloudera_version}"
 
-  echo "Removing Docker image ${repository}/${image}:${version}"
-  docker image rm --force ${registry}/${repository}/${image}:${version} > /dev/null 2>&1
-  docker image rm --force ${repository}/${image}:${version} > /dev/null 2>&1
+  # Append the version tag (e.g. 'alpha1' or '1.0') of the Docker images
+  local image_classifier="$(git describe)"
+  local image_version="$cloudera_version-$image_classifier"
+
+  echo "Removing Docker image ${repository}/${image}:${image_version}"
+  docker image rm --force ${registry}/${repository}/${image}:${image_version} > /dev/null 2>&1
+  docker image rm --force ${repository}/${image}:${image_version} > /dev/null 2>&1
   docker image prune --force
 }
 
 
 function build {
   local image="${1}"
-  local version="${cloudera_version}"
 
-  if [[ "${image}" == "base" ]]; then cat <<CAT > ${selfdir}/base/cdh-${version}.repo
-[cdh-${version}]
+  # Append the version tag (e.g. 'alpha1' or '1.0') of the Docker images
+  local image_classifier="$(git describe)"
+  local image_version="$cloudera_version-$image_classifier"
+
+  if [[ "${image}" == "base" ]]; then cat <<CAT > ${selfdir}/base/cdh-${cloudera_version}.repo
+[cdh-${cloudera_version}]
 name=Cloudera's Distribution for Hadoop
-baseurl=http://repos/cloudera/cdh-${version}
+baseurl=http://repos/cloudera/cdh-${cloudera_version}
 gpgcheck=0
 enabled=1
 CAT
@@ -61,20 +66,21 @@ CAT
 
   echo " "
   echo "========================================================="
-  echo "Rebuilding Docker image ${repository}/${image}:${version}"
+  echo "Rebuilding Docker image ${repository}/${image}:${image_version}"
   echo " "
 
   docker image build \
     --network ${network}  \
     --build-arg repository=${repository} \
-    --build-arg version=${cloudera_version} \
+    --build-arg cloudera_version=${cloudera_version} \
+    --build-arg image_version=${image_version} \
     --file ${selfdir}/${image}/Dockerfile \
-    --tag ${repository}/${image}:${version} \
+    --tag ${repository}/${image}:${image_version} \
     ${selfdir}/${image}
 
   docker image tag \
-    ${repository}/${image}:${version} \
-    ${registry}/${repository}/${image}:${version}
+    ${repository}/${image}:${image_version} \
+    ${registry}/${repository}/${image}:${image_version}
 
   local status=$?
   if [[ "${status}" -ne 0 ]]; then
