--- a/images/hadoop-hdfs/datanode/Dockerfile
+++ b/images/hadoop-hdfs/datanode/Dockerfile
@@ -1,9 +1,9 @@
 ARG repository
-ARG version
-FROM $repository/base:$version
+ARG image_version
+FROM $repository/base:$image_version
 
 LABEL maintainer="pangiole@tibco.com"
-LABEL description="This image provides Cloudera Hadoop DFS DataNode $version"
+LABEL description="This image provides Cloudera Hadoop DFS DataNode $image_version"
 
 
 RUN yum update -y \
