--- a/images/hive/Dockerfile
+++ b/images/hive/Dockerfile
@@ -1,9 +1,9 @@
 ARG repository
-ARG version
-FROM $repository/base:$version
+ARG image_version
+FROM $repository/base:$image_version
 
 LABEL maintainer="pangiole@tibco.com"
-LABEL description="This image provides Apache Hive2 on Cloudera Hadoop $version"
+LABEL description="This image provides Apache Hive2 on Cloudera Hadoop $image_version"
 
 
 RUN yum update -y \
