--- a/images/kdc/Dockerfile
+++ b/images/kdc/Dockerfile
@@ -1,9 +1,9 @@
 ARG repository
-ARG version
-FROM $repository/base:$version
+ARG image_version
+FROM $repository/base:$image_version
 
 LABEL maintainer="pangiole@tibco.com"
-LABEL description="This image provides the MIT Kerberos KDC for Clouder Hadoop $version"
+LABEL description="This image provides the MIT Kerberos KDC for Clouder Hadoop $image_version"
 
 RUN yum update -y \
 &&  yum install -y \
