--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,17 +11,17 @@ networks:
     name: "docker.net"
 
 services:
-#  kdc:
-#    image: "$registry/$repository/kdc:$image_version"
-#    hostname: "kdc.docker.net"
-#    container_name: "kdc"
-#    networks:
-#      - docker-net
-#    ports:
-#      - "4088:4088"
-#      - "4088:4088/udp"
-#    volumes:
-#      - "$mount/secrets:/mount/secrets"
+  kdc:
+    image: "$registry/$repository/kdc:$image_version"
+    hostname: "kdc.docker.net"
+    container_name: "kdc"
+    networks:
+      - docker-net
+    ports:
+      - "4088:4088"
+      - "4088:4088/udp"
+    volumes:
+      - "$mount/secrets:/mount/secrets"
 
 
   namenode:
@@ -43,139 +43,139 @@ services:
     depends_on:
       - kdc
 
-#
-#  datanode1:
-#    image: "$registry/$repository/hadoop-hdfs/datanode:$image_version"
-#    hostname: "datanode1.docker.net"
-#    container_name: "datanode1"
-#    environment:
-#      HADOOP_AUTHENTICATION: "$hadoop_auth"
-#      SASL_PROTECTION: "$sasl_protection"
-#      TLS_ENCRYPTION: "$tls_encryption"
-#    # cap_add:
-#    #   # Add Linux Kernel Capabilities (see http://man7.org/linux/man-pages/man7/capabilities.7.html)
-#    #   - NET_BIND_SERVICE
-#    privileged: true
-#    networks:
-#      - docker-net
-#    ports:
-#      - "50020:50020" # protbuf (ipc)
-#      - "50010:50010" # protbuf (data transfer)
-#      - "1004:1004"   # protbuf (data transfer)
-#      - "50075:50075" # http
-#      - "1006:1006"   # http
-#      #- "5052:5052"  # jvm-debug
-#    volumes:
-#      - "$mount/secrets:/mount/secrets"
-#    depends_on:
-#      - namenode
-#
-#
-#  jobhistory:
-#    image: "$registry/$repository/hadoop-mapred/jobhistory:$image_version"
-#    hostname: "jobhistory.docker.net"
-#    container_name: "jobhistory"
-#    environment:
-#      HADOOP_AUTHENTICATION: "$hadoop_auth"
-#      SASL_PROTECTION: "$sasl_protection"
-#      TLS_ENCRYPTION: "$tls_encryption"
-#    networks:
-#      - docker-net
-#    ports:
-#      - "19888:19888" # http      (yarn-ui)
-#      - "10020:10020" # protobuf
-#      #- "5053:5053"  # jvm-debug
-#    volumes:
-#      - "$mount/secrets:/mount/secrets"
-#    depends_on:
-#      - namenode
-#
-#
-#  resourcemanager:
-#    image: "$registry/$repository/hadoop-yarn/resourcemanager:$image_version"
-#    hostname: "resourcemanager.docker.net"
-#    container_name: "resourcemanager"
-#    environment:
-#      HADOOP_AUTHENTICATION: "$hadoop_auth"
-#      SASL_PROTECTION: "$sasl_protection"
-#      TLS_ENCRYPTION: "$tls_encryption"
-#    networks:
-#      - docker-net
-#    ports:
-#      - "8088:8088"   # http      (yarn-ui)
-#      - "8032:8032"   # protobuf
-#      - "8030:8030"   # protobuf
-#      #- "5054:5054"  # jvm-debug
-#    volumes:
-#      - "$mount/secrets:/mount/secrets"
-#    depends_on:
-#      - namenode
-#      - jobhistory
-#
-#
-#  nodemanager1:
-#    image: "$registry/$repository/hadoop-yarn/nodemanager:$image_version"
-#    hostname: "nodemanager1.docker.net"
-#    container_name: "nodemanager1"
-#    environment:
-#      HADOOP_AUTHENTICATION: "$hadoop_auth"
-#      SASL_PROTECTION: "$sasl_protection"
-#      TLS_ENCRYPTION: "$tls_encryption"
-#    networks:
-#      - docker-net
-#    ports:
-#      - "8041:8041"   # protobuf
-#      - "8042:8042"   # http     (yarn-ui)
-#      - "8043:8043"   # protobuf (map-reduce-AM)
-#      - "4041:4040"   # http     (spark-ui)
-#      #- "5055:5055"  # jvm-debug
-#    volumes:
-#      - "$mount/secrets:/mount/secrets"
-#    depends_on:
-#      - namenode
-#      - jobhistory
-#      - resourcemanager
-#
-#
-#  hive:
-#    image: "$registry/$repository/hive:$image_version"
-#    hostname: "hive.docker.net"
-#    container_name: "hive"
-#    environment:
-#      HADOOP_AUTHENTICATION: "$hadoop_auth"
-#      SASL_PROTECTION: "$sasl_protection"
-#      TLS_ENCRYPTION: "$tls_encryption"
-#    networks:
-#      - docker-net
-#    ports:
-#      - "10000:10000" # jdbc
-#      #- "5056:5056"  # jvm-debug
-#    volumes:
-#      - "$mount/secrets:/mount/secrets"
-#    depends_on:
-#      - namenode
-#      - resourcemanager
-#
-#
-#  edge:
-#    image: "$registry/$repository/edge:$image_version"
-#    hostname: "edge.docker.net"
-#    container_name: "edge"
-#    environment:
-#      HADOOP_AUTHENTICATION: "$hadoop_auth"
-#      SASL_PROTECTION: "$sasl_protection"
-#      TLS_ENCRYPTION: "$tls_encryption"
-#    networks:
-#      - docker-net
-#    ports:
-#      - "2222:22"      # ssh        (sshd)
-#      - "4042:4040"    # http       (spark-ui)
-#      #- "5057:5057"   # jvm-debug
-#    volumes:
-#      - "$mount/secrets:/mount/secrets"
-#      - "$mount/conf:/mount/conf"
-#      - "$mount/data:/mount/data"
-#    depends_on:
-#      - namenode
-#      - resourcemanager
-#      - hive
+
+  datanode1:
+    image: "$registry/$repository/hadoop-hdfs/datanode:$image_version"
+    hostname: "datanode1.docker.net"
+    container_name: "datanode1"
+    environment:
+      HADOOP_AUTHENTICATION: "$hadoop_auth"
+      SASL_PROTECTION: "$sasl_protection"
+      TLS_ENCRYPTION: "$tls_encryption"
+    # cap_add:
+    #   # Add Linux Kernel Capabilities (see http://man7.org/linux/man-pages/man7/capabilities.7.html)
+    #   - NET_BIND_SERVICE
+    privileged: true
+    networks:
+      - docker-net
+    ports:
+      - "50020:50020" # protbuf (ipc)
+      - "50010:50010" # protbuf (data transfer)
+      - "1004:1004"   # protbuf (data transfer)
+      - "50075:50075" # http
+      - "1006:1006"   # http
+      #- "5052:5052"  # jvm-debug
+    volumes:
+      - "$mount/secrets:/mount/secrets"
+    depends_on:
+      - namenode
+
+
+  jobhistory:
+    image: "$registry/$repository/hadoop-mapred/jobhistory:$image_version"
+    hostname: "jobhistory.docker.net"
+    container_name: "jobhistory"
+    environment:
+      HADOOP_AUTHENTICATION: "$hadoop_auth"
+      SASL_PROTECTION: "$sasl_protection"
+      TLS_ENCRYPTION: "$tls_encryption"
+    networks:
+      - docker-net
+    ports:
+      - "19888:19888" # http      (yarn-ui)
+      - "10020:10020" # protobuf
+      #- "5053:5053"  # jvm-debug
+    volumes:
+      - "$mount/secrets:/mount/secrets"
+    depends_on:
+      - namenode
+
+
+  resourcemanager:
+    image: "$registry/$repository/hadoop-yarn/resourcemanager:$image_version"
+    hostname: "resourcemanager.docker.net"
+    container_name: "resourcemanager"
+    environment:
+      HADOOP_AUTHENTICATION: "$hadoop_auth"
+      SASL_PROTECTION: "$sasl_protection"
+      TLS_ENCRYPTION: "$tls_encryption"
+    networks:
+      - docker-net
+    ports:
+      - "8088:8088"   # http      (yarn-ui)
+      - "8032:8032"   # protobuf
+      - "8030:8030"   # protobuf
+      #- "5054:5054"  # jvm-debug
+    volumes:
+      - "$mount/secrets:/mount/secrets"
+    depends_on:
+      - namenode
+      - jobhistory
+
+
+  nodemanager1:
+    image: "$registry/$repository/hadoop-yarn/nodemanager:$image_version"
+    hostname: "nodemanager1.docker.net"
+    container_name: "nodemanager1"
+    environment:
+      HADOOP_AUTHENTICATION: "$hadoop_auth"
+      SASL_PROTECTION: "$sasl_protection"
+      TLS_ENCRYPTION: "$tls_encryption"
+    networks:
+      - docker-net
+    ports:
+      - "8041:8041"   # protobuf
+      - "8042:8042"   # http     (yarn-ui)
+      - "8043:8043"   # protobuf (map-reduce-AM)
+      - "4041:4040"   # http     (spark-ui)
+      #- "5055:5055"  # jvm-debug
+    volumes:
+      - "$mount/secrets:/mount/secrets"
+    depends_on:
+      - namenode
+      - jobhistory
+      - resourcemanager
+
+
+  hive:
+    image: "$registry/$repository/hive:$image_version"
+    hostname: "hive.docker.net"
+    container_name: "hive"
+    environment:
+      HADOOP_AUTHENTICATION: "$hadoop_auth"
+      SASL_PROTECTION: "$sasl_protection"
+      TLS_ENCRYPTION: "$tls_encryption"
+    networks:
+      - docker-net
+    ports:
+      - "10000:10000" # jdbc
+      #- "5056:5056"  # jvm-debug
+    volumes:
+      - "$mount/secrets:/mount/secrets"
+    depends_on:
+      - namenode
+      - resourcemanager
+
+
+  edge:
+    image: "$registry/$repository/edge:$image_version"
+    hostname: "edge.docker.net"
+    container_name: "edge"
+    environment:
+      HADOOP_AUTHENTICATION: "$hadoop_auth"
+      SASL_PROTECTION: "$sasl_protection"
+      TLS_ENCRYPTION: "$tls_encryption"
+    networks:
+      - docker-net
+    ports:
+      - "2222:22"      # ssh        (sshd)
+      - "4042:4040"    # http       (spark-ui)
+      #- "5057:5057"   # jvm-debug
+    volumes:
+      - "$mount/secrets:/mount/secrets"
+      - "$mount/conf:/mount/conf"
+      - "$mount/data:/mount/data"
+    depends_on:
+      - namenode
+      - resourcemanager
+      - hive
